qdrant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo4j-ingress
  namespace: neo4j
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - "neo4j.onto.one"
      secretName: wildcard-onto-one
  rules:
    - host: "neo4j.onto.one"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo4j-admin
                port:
                  number: 7474
